# hello_world_nrf7002

./: Cargo.toml
src/: main.rs
